<resources>
    <string name="app_name">NEWs online</string>
    <string name="font_material_icon">fonts/Material-Design-Iconic-Font.ttf</string>
    <string name="font_weather">fonts/weather.ttf</string>
    <!-- Font Icon Code -->
    <string name="ic_view">&#xf27d;</string>
    <string name="ic_share">&#xf35b;</string>
    <string name="ic_export">&#xf1b0;</string>
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
    <string name="ic_eye">&#xf15c;</string>
    <string name="ic_label_heart">&#xf186;</string>
    <string name="ic_user">&#xf20e;</string>
    <string name="ic_share_link">&#xf18e;</string>
    <!-- project string -->
    <string name="title_prompt">Choose a channel</string>
    <string name="msg_data_empty">data empty</string>
    <string name="msg_see_more_at_link">see more at : <u>[link]</u></string>
    <string name="app_title">news online</string>
    <string name="menu_history">History</string>
    <string name="msg_read_more">click to readmore</string>
    <string name="msg_update_error">oops ! can not update latest news, plz check your
        connect!</string>
    <string name="msg_error">can not load data from this source !!</string>
    <string name="msg_update_weather">oops can not update weather</string>
    <string name="msg_has_news">someone share news for you! </string>
    <string name="msg_export_pdf_error">opps! export PDF fail</string>
    <string name="msg_export_pdf_success">export PDF file success!</string>
    <string name="title_share">share title</string>
    <string name="title_setting">Settings</string>
    <string name="msg_install_app">plz install apps you want share with</string>
    <string name="msg_file_not_exists">"The file not exists! "</string>
    <string name="msg_share_link_success">"share link to other success!"</string>
    <string name="msg_share_link_fail">"share link to other fail!"</string>
    <string name="msg_install_pdf_reader_app">plz install pdf reader app</string>
    <string name="title_intent_open_file_pdf">Open File</string>
    <string name="text_new">new</string>
    <string name="text_allow_image">Allow load image:</string>
    <string name="text_submit">submit</string>
    <string name="text_cancel">cancel</string>
    <string name="text_light_style">Light Style</string>
    <string name="text_dark_style">Dark Style</string>
    <string name="text_size_small">S</string>
    <string name="text_size_medium">M</string>
    <string name="text_size_large">L</string>
    <string name="menu_clear_all_history">clear all history</string>
    <string name="menu_select_history">select history</string>
    <string name="text_clear_all">clear all</string>
    <string name="text_start_time">start time</string>
    <string name="text_end_time">end time</string>
    <string name="text_choice_time">choice time to clear history</string>
    <string name="text_clear">clear</string>
    <string name="text_user_online">User online:</string>
    <string name="text_allow_notification">Allow notification:</string>
    <string name="msg_name_empty">rss name can not be empty</string>
    <string name="msg_link_empty">rss link can not be empty</string>
    <string name="msg_link_incorrect">link is incorrect</string>
    <string name="text_rss_link">Rss link</string>
    <string name="text_rss_name">Rss name</string>
    <string name="text_add_more_channel">add more channel</string>
    <string name="text_today">Today</string>
    <string name="text_temp">%s °C</string>
    <!-- spinner data -->
    <string-array name="channel_arrays">
        <item>Asia - Voice of America</item>
        <item>USA - Voice of America</item>
        <item>Africa - Voice of America</item>
        <item>Middle East - Voice of America</item>
        <item>Europe - Voice of America</item>
        <item>Health - Voice of America</item>
        <item>Arts &amp; Entertainment - Voice of America</item>
        <item>2016 USA Votes - Voice of America</item>
        <item>One-Minute Features - Voice of America</item>
        <item>Extremism Watch - Voice of America</item>
        <item>Day in Photos - Voice of America</item>
    </string-array>
</resources>
