<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radio_group_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button_dark_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_dark_style"/>

            <RadioButton
                android:id="@+id/radio_button_light_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_light_style"/>

        </RadioGroup>

        <View
            android:id="@+id/view_break_line_top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_tiny"
            android:layout_marginBottom="@dimen/dimen_medium"
            android:layout_marginTop="@dimen/dimen_medium"
            android:background="@color/colorAccentSecond"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_allow_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_allow_image"/>

            <CheckBox
                android:id="@+id/check_box_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <View
            android:id="@+id/view_break_line_bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_tiny"
            android:layout_marginBottom="@dimen/dimen_medium"
            android:layout_marginTop="@dimen/dimen_medium"
            android:background="@color/colorAccentSecond"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_allow_sub_topic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_allow_notification"/>

            <CheckBox
                android:id="@+id/check_box_sub_topic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_tiny"
            android:layout_marginBottom="@dimen/dimen_medium"
            android:layout_marginTop="@dimen/dimen_medium"
            android:background="@color/colorAccentSecond"/>

        <RadioGroup
            android:id="@+id/radio_group_setting_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_medium"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_size_small"/>

            <RadioButton
                android:id="@+id/radio_button_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_size_medium"/>

            <RadioButton
                android:id="@+id/radio_button_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_size_large"/>

        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_settings_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/bg_new_tag"
                android:text="@string/text_submit"/>

            <Button
                android:id="@+id/button_settings_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/bg_new_tag"
                android:text="@string/text_cancel"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
